--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">Fetch Rewards - List Display</string>
+    <string name="app_name">Fetch Rewards Coding Exercise</string>
     <string name="action_settings">Settings</string>
 
 
     <string name="failed_load">Failed to load data. Check your internet connection.</string>
     <string name="directions">Click on each List ID to show items with that ID</string>
+    <string name="id_header_label">ID</string>
+    <string name="name_header_label">Name</string>
 </resources>
